tests/broadcast/array1_fail.stderr
error[E0631]: type mismatch in function arguments
  --> tests/broadcast/array1_fail.rs:18:28
   |
18 |     let c = a.broadcast(b, op);
   |               ---------    ^^
   |               |            |
   |               |            expected due to this
   |               |            found signature defined here
   |               required by a bound introduced by this call
   |
   = note: expected function signature `for<'a, 'b> fn(&'a _, &'b matrix::prelude::Array1<{integer}, 2>) -> _`
              found function signature `for<'a, 'b> fn(&'a _, &'b i32) -> _`
note: required by a bound in `broadcast`
  --> src/broadcast.rs
   |
   |     fn broadcast(self, rhs: Rhs, op: impl Fn(&T, &U) -> V) -> Self::Output;
   |                                           ^^^^^^^^^^^^^^^ required by this bound in `Broadcast::broadcast`
help: consider wrapping the function in a closure
   |
18 |     let c = a.broadcast(b, |arg0: &i32, arg1| op(arg0, /* &i32 */));
   |                            ++++++++++++++++++   ++++++++++++++++++
